--- a/orders/templates/orders/order.html
+++ b/orders/templates/orders/order.html
@@ -33,7 +33,7 @@
       {% endfor %}
       <pre><li><b>Total<b> {{ price }}</li></pre>
     </ul>
-    <button> <a href="#" target="_blank">  <h3>Make Payment</h3></a>
+    <button> <a href="{% url 'payment' %}" target="_blank">  <h3>Make Payment</h3></a>
     </button>
 
   </body>
